# tetsudai

./: config.toml  pyproject.toml
src/tetsudai/: __init__.py  _codegen.py  _release.py
